# vkusnie-cookies-for-idealo-de

./: .env.example  .gitignore  README.md  pyproject.toml
api/: config.py  database.py  exceptions.py  main.py  models.py  start.sh
cookie_cleaner/: main.py
cookie_collector/: collector.py  config.py  main.py  run_collector.py  solve_captcha.py  start.sh
